# waypoint

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  install.sh
.github/workflows/: ci.yml  crates-publish.yml  docker-publish.yml
docs/: ENGINES.md  TESTING.md
docs/fixtures/basic/: V1__Create_users.sql  V2__Create_orders.sql  V3__Add_user_profile.sql
docs/fixtures/changelog/: R__Create_user_stats_view.sql  V1__Create_users.sql  V3__Add_user_profile.sql  V4__Create_categories.sql
docs/fixtures/conflicts-branch-a/: V3__Add_status_column.sql
docs/fixtures/dependency/: V1__Create_users.sql  V2__Create_products.sql  V3__Create_orders.sql  V4__Create_reviews.sql  V5__Add_user_email.sql
docs/fixtures/env-scoping/: V1__Create_users.sql  V2__Seed_test_data.sql  V3__Create_audit_log.sql  V4__Add_debug_columns.sql
docs/fixtures/lint/: V1__Create_users_no_if_not_exists.sql  V2__Add_email_not_null_no_default.sql  V3__Add_index_no_concurrently.sql  V4__Drop_column_destructive.sql  V5__Alter_column_type.sql  V7__Volatile_default.sql  V8__Empty_file.sql  V9__Clean_migration.sql
docs/fixtures/multi-db/: waypoint.toml
docs/fixtures/multi-db/app/: V1__Create_app_tables.sql
docs/fixtures/multi-db/auth/: V1__Create_auth_tables.sql
docs/fixtures/undo/: U3__Add_user_profile.sql  V1__Create_users.sql  V2__Create_orders.sql
waypoint-cli/: Cargo.toml  build.rs
waypoint-cli/src/: main.rs  output.rs  self_update.rs
waypoint-core/: Cargo.toml
waypoint-core/src/: advisor.rs  config.rs  db.rs  dependency.rs  directive.rs  error.rs  guard.rs  history.rs  hooks.rs  lib.rs  migration.rs  multi.rs  placeholder.rs  preflight.rs  reversal.rs  safety.rs  schema.rs  sql_parser.rs
waypoint-core/src/commands/: advisor.rs  baseline.rs  changelog.rs  check_conflicts.rs  clean.rs  diff.rs  drift.rs  explain.rs  info.rs  lint.rs  migrate.rs  mod.rs  preflight.rs  repair.rs  safety.rs  simulate.rs  snapshot.rs  undo.rs  validate.rs
waypoint-core/src/dialect/: mod.rs  mysql.rs  postgres.rs
waypoint-core/src/engines/mysql/: migrate.rs  mod.rs  safety.rs
waypoint-core/tests/: integration_test.rs  mysql_integration_test.rs
(+2 files in other folders)
