[package]
name = "waypoint-cli"
version = "0.3.0"
edition = "2021"
description = "Lightweight, Flyway-compatible PostgreSQL migration CLI"
license = "MIT"
repository = "https://github.com/mantissaman/waypoint"
homepage = "https://github.com/mantissaman/waypoint"
keywords = ["database", "migration", "postgresql", "flyway", "cli"]
categories = ["command-line-utilities", "database"]
readme = "../README.md"
documentation = "https://docs.rs/waypoint-core"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
waypoint-core = { version = "0.3.0", path = "../waypoint-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
tempfile = "3"
flate2 = "1"
tar = "0.4"

[build-dependencies]
chrono = "0.4"
