[package]
name = "waypoint-cli"
version = "0.3.0"
edition = "2021"
description = "Lightweight, Flyway-compatible PostgreSQL migration CLI"
license = "MIT"
repository = "https://github.com/mantissaman/waypoint"
homepage = "https://github.com/mantissaman/waypoint"
keywords = ["database", "migration", "postgresql", "flyway", "cli"]
categories = ["command-line-utilities", "database"]
readme = "../README.md"
documentation = "https://docs.rs/waypoint-core"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
waypoint-core = { version = "0.3.0", path = "../waypoint-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
colored = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
semver = "1"
tempfile = "3"
flate2 = "1"
tar = "0.4"

[build-dependencies]
chrono = "0.4"
